1) Добавил реализацию эндпоинта POST /questions/{questionId}/answers 2) Реализовал метод AnswerCreate репозитория 3) Добавил вспомогательные структуры 4) Подробнее описал структуры модельного слоя. Указал каким колонкам таблицы соответствует каждое поле структуры 5) Чуть обновить API спецификацию
