# internal/model/answer.go
@@ -3,9 +3,9 @@ package model
 import "time"
 
 type Answer struct {
-	Id         int
-	QuestionId int
-	UserId     string
-	Text       string
-	CreatedAt  time.Time
+	AnswerId   int       `gorm:"column:id;primarykey"`
+	QuestionId int       `gorm:"column:question_id"`
+	UserId     string    `gorm:"column:user_id"`
+	Text       string    `gorm:"column:text"`
+	CreatedAt  time.Time `gorm:"column:created_at"`
 }
