# internal/model/question.go
@@ -3,7 +3,7 @@ package model
 import "time"
 
 type Question struct {
-	Id        int `gorm:"primaryKey"`
-	Text      string
-	CreatedAt time.Time
+	QuestionId int       `gorm:"column:id;primaryKey"`
+	Text       string    `gorm:"column:text"`
+	CreatedAt  time.Time `gorm:"column:created_at"`
 }
